# familyfinancialcompass

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
config/: system_assumptions.json
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ReportDocument.tsx  api.ts  styles.css  types.ts
sql/: schema.sql
sql/migrations/: 001_multi_module_scenarios.sql
src/family_financial_compass/: __init__.py  api_models.py  app.py  assumptions.py  college_vs_retirement.py  config.py  db.py  demo.py  job_offer.py  legal.py  models.py  money.py  rent_vs_buy.py  reporting.py  repository.py  retirement_survival.py  scenario.py  service.py  settings.py  tax.py
tests/: test_assumptions.py  test_college_vs_retirement.py  test_job_offer.py  test_rent_vs_buy.py  test_retirement_survival.py  test_service_api.py
