[project]
name = "family-financial-compass"
version = "0.1.0"
description = "Core decision engine for Family Financial Compass."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0",
    "numpy>=2.3.0",
    "numpy-financial>=1.0.0",
    "psycopg[binary,pool]>=3.2.0,<4.0.0",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
